# wordcount

./: .clang-format  CMakeLists.txt  DevNotes.txt  Documentation.md  README.md  build.sh  build_with_docker.sh
docker/: Dockerfile
src/: CMakeLists.txt  args_parser.h  letter_type.h  main.cpp  map_transform.h  word_count_app.h  word_freq_app.h
test/: CMakeLists.txt  args_parser_test.cpp  letter_type_test.cpp  map_transform_test.cpp  word_count_app_test.cpp  word_freq_app_test.cpp
